Changed image, adjusted size and max width.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="content">
             <h1>Pardon Our Digital Dust!</h1>
-            <img src="https://media.istockphoto.com/id/147694183/photo/under-construction.jpg?s=612x612&w=0&k=20&c=xCsjS2O6cav7s9meVmI-HTkcsUqT_V-kz9PZIrt5FgU=">
+            <img src="https://static.vecteezy.com/system/resources/previews/012/413/033/non_2x/cartoon-rabbit-construction-worker-free-vector.jpg">
             <h2>LeapsandBoundsPrek.com is currently under construction.</h2>
             <p>We know you're excited to get to know your child's potential teacher and school, so bear with us and we'll have the website ready to go in the next few weeks!</p>
         </div>
